--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@types/node": "^14.6.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
-    "i18next": "^19.7.0",
-    "i18next-http-backend": "^1.0.18",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-i18next": "^11.7.2",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.0.2"
   },
