--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.21",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -21,7 +22,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
