--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
+    "swiper": "^6.3.4",
     "typescript": "^4.0.2",
     "uuid": "^8.3.1"
   },
