swiper with dynamically pages

--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "avtalsformular-react",
+  "name": "score-more",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
@@ -15,14 +11,14 @@
     "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
-    "swiper": "^6.3.4",
+    "swiper": "^6.4.5",
     "typescript": "^4.0.2",
     "uuid": "^8.3.1"
   },
