--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.21",
     "@types/uuid": "^8.3.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "react-select": "^3.1.0",
-    "swiper": "^6.3.4",
+    "swiper": "^6.6.2",
     "typescript": "^4.0.2",
     "uuid": "^8.3.1"
   },
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-burger-menu": "^2.8.0"
   }
 }
